<resources>
    <string name="app_name">FlightMobileApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="connect">Connect</string>
    <string name="control_screen">control screen</string>
    <string name="button">Button</string>
    <string name="type_url">Type URL</string>
    <string name="localhost1">LocalHost1</string>
    <string name="localhost2">localhost2</string>
    <string name="localhost3">localhost3</string>
    <string name="localhost4">localhost4</string>
    <string name="localhost5">localhost5</string>
    <string name="simulator_image">simulator Image</string>
</resources>